--- a/assets/includes/marquee.css
+++ b/assets/includes/marquee.css
@@ -70,3 +70,10 @@ body {  margin: 0px; padding: 10px; }
   background-color: rgba(255,255,255,.6); color:#000;
   border-color: rgba(255,255,255,0);
 }
+
+.marquee .overlay {
+  position: absolute; left: 0; top: 0;
+  width: 100%; height: 100%;
+  background-image: linear-gradient(rgba(0,0,0,0) 45%, rgba(0,0,0,.7) 70%);
+  background-size: 100%;
+}
