--- a/assets/includes/marquee.css
+++ b/assets/includes/marquee.css
@@ -77,3 +77,26 @@ body {  margin: 0px; padding: 10px; }
   background-image: linear-gradient(rgba(0,0,0,0) 45%, rgba(0,0,0,.7) 70%);
   background-size: 100%;
 }
+
+.marquee .marquee_nav {
+  position: absolute; bottom: 10px; left: 0;
+  text-align: center; width: 100%;
+  z-index: 103;
+}
+
+.marquee .marquee_nav div {
+  display: inline-block;
+  width: 10px; height: 10px;
+  border: 2px solid rgba(255,255,255,.5);
+  border-radius: 50%;
+  margin: 0px 8px 0px 8px;
+  cursor: pointer;
+  transition: background-color .4s, border .4s;
+}
+
+.marquee .marquee_nav div:hover {
+  border-color: #fff;
+  background-color: rgba(255,255,255,.2);
+}
+
+.marquee .marquee_nav div.selected { background-color: #fff; }
