--- a/assets/includes/marquee.css
+++ b/assets/includes/marquee.css
@@ -127,3 +127,10 @@ body {  margin: 0px; padding: 10px; }
   background-image: url(../images/arrow_right.svg);
   background-position: -3px 4px;
 }
+
+.marquee .marquee_stage_small { height: inherit; position: relative; overflow: hidden; }
+
+.marquee .marquee_stage_small .marquee_panel {
+  width: 100%; height: inherit;
+  position: absolute; top: 0; left: 0;
+}
